# api/docs/swagger.json
@@ -114,6 +114,49 @@
                 }
             }
         },
+        "/sign-in": {
+            "post": {
+                "description": "API for Sign In",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Auth Service"
+                ],
+                "summary": "Sign In using client_id, email, and access_token",
+                "parameters": [
+                    {
+                        "description": "Client ID",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.SignInReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/rest.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/rest.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/rest.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/sign-up": {
             "post": {
                 "description": "API for Sign Up",
@@ -147,7 +190,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.SignInRes"
+                                            "$ref": "#/definitions/models.SignUpRes"
                                         }
                                     }
                                 }
@@ -212,8 +255,19 @@
                 }
             }
         },
-        "models.SignInRes": {
-            "type": "object"
+        "models.SignInReq": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "client_id": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                }
+            }
         },
         "models.SignUpReq": {
             "type": "object",
@@ -234,6 +288,23 @@
                     "type": "string"
                 },
                 "last_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.SignUpRes": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "active": {
+                    "type": "boolean"
+                },
+                "client_id": {
+                    "type": "string"
+                },
+                "refresh_token": {
                     "type": "string"
                 }
             }
