# internal/models/signIn.go
@@ -1,11 +1,7 @@
 package models
 
 type SignInReq struct {
-	ClientID string `json:"client_id"`
-	Email string `json:"email"`
+	ClientID    string `json:"client_id"`
+	Email       string `json:"email"`
 	AccessToken string `json:"access_token"`
-}
-
-type SignInRes struct {
-	
 }
